# classification

./: .gitignore  LICENSE  pyproject.toml
classification/: run_classifiers.ipynb
classification/classify/: run_classifier.py  sklearn_classifiers.py  transformer_classifier.py
classification/encode/: text_encoder.py
classification/env/: env.py
tests/classification/classify/: run_classifier_test.py  transformer_classifier_test.py
utils/: app_logging.py
